#2 modified sidebar css and fixed collapsed layout

--- a/css/custom-lovelyn.css
+++ b/css/custom-lovelyn.css
@@ -1,14 +1,34 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+/*
+    DEMO STYLE
+*/
 
-body{
-    font-family: sans-serif;
-    background-color: #cccccc;
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+body {
+    font-family:sans-serif;
+    background: #fafafa;
+    overflow:hidden;
+}
+
+p {
+    font-family:sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
 /* Top Navbar */
+.navbar {
+    padding: 15px 10px;
+    border: none;
+    border-radius: 0;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
 .navbar-custom {
     background-color: #31708F;
-    color: white;
+    color: white; 
+    max-height: 63px;   
 }
 
 .navbar-brand{
@@ -16,6 +36,10 @@ body{
     font-weight: bold;
     line-height: normal;
     font-size: 24px;
+}
+
+.navbar-nav .pr-4{
+    border-right: 2px #F0AD4E;
 }
 
 
@@ -56,6 +80,34 @@ body{
    font-style: italic;
 }
 
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+i,
+span {
+    display: inline-block;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -65,26 +117,43 @@ body{
     align-items: stretch;
 }
 
-#sidebarCollapse{
-    margin-right:35px;
-}
-
 #sidebar {
     min-width: 250px;
     max-width: 250px;
     background: #FAFAFA;
-    color: #fff;
+    color: #333333;
     transition: all 0.3s;
     position: relative;
+    box-shadow: 0px 5.5px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+    /* overflow-y: initial !important; */
+    -webkit-overflow-scrolling: touch
 }
 
-
-
 #sidebar.active {
-    min-width: 90px;
-    max-width: 80px;
+    min-width: 60px;
+    max-width: 60px;
     text-align: center;
     position: relative;
+    
+}
+
+/* #sidebar:hover{
+   overflow-y: scroll;
+} */
+
+#sidebarCollapse{
+    min-width: 60px;
+    max-width: 60px;
+    min-height: 63px;
+    max-height: 63px;
+    background: #F0AD4E;
+    border-color: transparent;
+    position: relative;
+} 
+
+#sidebarCollapse:focus,#sidebarCollapse:active {
+   outline: none !important;
+   box-shadow: none;
 }
 
 #sidebar.active .sidebar-header h3,
@@ -101,9 +170,9 @@ body{
 }
 
 #sidebar.active ul li a {
-    padding: 20px 10px;
     text-align: center;
-    font-size: 0.85em;
+    font-size: 1.50em;
+    max-height: 50px;
 }
 
 #sidebar.active ul li a i {
@@ -117,8 +186,12 @@ body{
     padding: 10px !important;
 }
 
-#sidebar.active span .hide-menu{
+#sidebar.active span.hide-menu{
     visibility: hidden;
+}
+
+#sidebar.active i{
+    font-size: 2em;
 }
 
 #sidebar.active .dropdown-toggle::after {
@@ -130,10 +203,18 @@ body{
     transform: translateX(50%);
 }
 
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #FFC107;
+#sidebar .sidebar-topnav {
+    background: #333333;
+    float: right;
 }
+
+
+#sidebar .sidebar-header {
+    height: 63px;
+    background: #FAF2CC;
+    position: relative;
+}
+
 
 #sidebar .sidebar-header strong {
     display: none;
@@ -142,7 +223,6 @@ body{
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul li a {
@@ -153,7 +233,7 @@ body{
 
 #sidebar ul li a:hover {
     color: #7386D5;
-    background: #FAF2CC;
+    background: #fff;
 }
 
 #sidebar ul li a i {
@@ -162,12 +242,12 @@ body{
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #4285F4;
-    background: #FAF2CC;
+    color: #fff;
+    background: #4DB6AC;
 }
 
 a[data-toggle="collapse"] {
-    position: sticky;
+    position: relative;
 }
 
 .dropdown-toggle::after {
@@ -210,6 +290,11 @@ a.article:hover {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
+#topnav {
+    width: 100%;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
 
 #content {
     width: 100%;
@@ -222,7 +307,7 @@ a.article:hover {
     MEDIAQUERIES
 ----------------------------------------------------- */
 
-@media (max-width: 768px) {
+@media (max-width: 200px) {
     #sidebar {
         min-width: 80px;
         max-width: 80px;
@@ -232,10 +317,10 @@ a.article:hover {
     .dropdown-toggle::after {
         top: auto;
         bottom: 10px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
+        right: 30%;
+        -webkit-transform: translateX(30%);
+        -ms-transform: translateX(30%);
+        transform: translateX(30%);
     }
     #sidebar.active {
         margin-left: 0 !important;
@@ -270,5 +355,3 @@ a.article:hover {
         display: none;
     }
 }
-
-
